test/tests/node/package/validation/unknown-top-level-key.txt
error: unknown key `surprise` in package definition
 --> tests/node/package/validation/unknown-top-level-key.tql:6:1
  |
6 | package::add
  | ^^^^^^^^^^^^ 
  |
  = note: invalid package definition
